Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80493

Static binaries do not contain QtQuick3D resources on INTEGRITY

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.14.1, 5.15.0 Alpha
    • 5.14.0 Beta3
    • Quick: 3D
    • None
    • Integrity
    • 386372cd8d11454dc2457906746dfe64368b1707 (qt/qtquick3d/5.14)

      I/O: Adding search directory: ./
      I/O: Failed to find file: res/effectlib/funcgetTransformedUVCoords.glsllib
      I/O: Searched path: :/
      I/O: QSSG.invalid_operation: Failed to find include file funcgetTransformedUVCoords.glsllib
      I/O: ASSERT: "false" in file /home/tiaarnip/src/qt5-integritysource/qtquick3d/src/runtimerender/qssgrenderdynamicobjectsystem.cpp, line 319

      It is possible that this is not related to INTEGRITY but more commonly to static builds.

      Adding qtquick3d/src/runtimerender/res.qrc to RESOURCES of the application fixes this issue.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0150566 Janne Roine
            taarnipuro Timo Aarnipuro
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes