Fix loading of res.qrc in static builds

Initialize resources when loading Quick3D plugin.

Fixes: QTBUG-80493
Change-Id: I71dab855fd88c2fd31006e9ddb45fb513ce7334d
Reviewed-by: Timo Aarnipuro <timo.aarnipuro@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>