src/imports/quick3d/plugin.cpp
@@ -60,6 +60,7 @@ static void initResources()
 {
 #ifdef QT_STATIC
     Q_INIT_RESOURCE(qmake_QtQuick3D);
+    Q_INIT_RESOURCE(res);
 #endif
 }
 
